test/visibility/except/noAllowPrivateAccess.good
noAllowPrivateAccess.chpl:15: In function 'main':
noAllowPrivateAccess.chpl:16: error: 'c' undeclared (first use this function)
